# projetos-oi

./: README.md
bot/: .gitignore  Cargo.toml  build_to_oracle_server.sh
bot/src/: lib.rs  main.rs
chain-monitor/: .gitignore  Cargo.toml  RAID_COLLECTIONS.xml  build_to_oracle_server.sh  cases.md  model.sql  query.sh  report_model.txt
chain-monitor/src/: application.rs  configurations.rs  lib.rs  main.rs
ged-parser/: .env.example  .gitignore  Cargo.toml  README.md  model.csv
ged-parser/src/: lib.rs  main.rs  structs.rs
ged-parser/src/tools/: comparator_filter.rs  date.rs  mod.rs  printer.rs  telegram.rs
invoices-fiber/: .gitignore  Cargo.toml  build_to_oracle_server.sh  faturas_nova_fibra.sh  model.csv
invoices-fiber/src/: application.rs  configurations.rs  lib.rs  main.rs
invoices-fiber/src/tools/: csv.rs  mod.rs  report.rs
invoices-flow/: .gitignore  Cargo.toml  build_to_oracle_server.sh
invoices-flow/src/: application.rs  configurations.rs  lib.rs  main.rs  tools.rs
invoices-flow/src/cases/: history.rs  mod.rs  report.rs
invoices-products/: .gitignore  Cargo.toml  build_to_oracle_server.sh  fatura-resumida-produtos.sh  query.sql  result.csv
invoices-status/: .env  .gitignore  Cargo.toml  model.csv  spreadsheet.csv
scar/: .env  .env.example  .gitignore  package.json
shells/: chain-report.sh  fast-endpoint-status.sh  ged360-qrcode-status.sh  relatorio-das-cadeias.sh  sysout-analyzer.sh
store-backlog/: .gitignore  Cargo.toml  build_to_oracle_server.sh
telegram-observer/: .gitignore  Cargo.toml  build_to_oracle_server.sh
(+46 files in other folders)
