[package]
name = "invoices-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
spreadsheet-maker = "0.1.0"
tg-api = "0.4.1"

[dependencies.uuid]
uuid = "1.3.0"
features = [
    "v4", "fast-rng"
]
